# usso-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: release.yml  test.yml
src/usso/: __init__.py  api.py  api_key.py  async_api.py  async_session.py  auth.py  authorization.py  b64tools.py  client.py  config.py  core.py  enums.py  exceptions.py  httpx_session.py  schemas.py  session.py  user.py
src/usso/auth/: __init__.py  api_key.py  authorization.py  client.py  config.py
src/usso/client/: __init__.py  api.py  async_api.py  async_client.py  base_client.py  client.py
src/usso/django/: middleware.py
src/usso/fastapi/: __init__.py  auth_middleware.py  integration.py
src/usso/integrations/django/: __init__.py  backend.py  dependency.py  middleware.py
src/usso/integrations/fastapi/: __init__.py  dependency.py  handler.py
src/usso/models/: user.py
src/usso/session/: __init__.py  async_session.py  base_session.py  session.py
src/usso/utils/: __init__.py  agent.py  method_utils.py  string_utils.py  validators.py
src/usso_fastapi/: integration.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_authorization.py  test_client.py  test_core.py  test_fastapi.py  test_simple.py  test_utils.py  test_validators.py
