[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "usso"
version = "0.26.1"
description = "A plug-and-play client for integrating universal single sign-on (SSO) with Python frameworks, enabling secure and seamless authentication across microservices."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["usso", "sso", "authentication", "security", "fastapi", "django"]
authors = [
  {name = "Mahdi Kiani", email = "mahdikiany@gmail.com"}
]
maintainers = [
  {name = "Mahdi Kiani", email = "mahdikiany@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pydantic>=2",
  "requests>=2.26.0",
  "pyjwt[crypto]",
  # "singleton_package",
  "cachetools",
]
optional-dependencies = {"fastapi"=["fastapi>=0.65.0", "uvicorn[standard]>=0.13.0"], "django"=["Django>=3.2"], "httpx"=["httpx"], "dev"=["check-manifest"], "test" = ["coverage"], "all"=["fastapi", "uvicorn", "django", "httpx", "dev", "test"]}

[project.urls]
"Homepage" = "https://github.com/ussoio/usso-python"
"Bug Reports" = "https://github.com/ussoio/usso-python/issues"
"Funding" = "https://github.com/ussoio/usso-python"
"Say Thanks!" = "https://saythanks.io/to/mahdikiani"
"Source" = "https://github.com/ussoio/usso-python"

[project.scripts]
usso = "usso:main"

[tool.setuptools]
package-data = {"usso" = ["*.dat"]}
